# cmake-hello-world

./: CMakeLists.txt  README.md
app/: main.cpp
include/: animal.hpp  fibo.hpp  hello.hpp  matrix.hpp  mystring.hpp  mystruct.hpp
src/: animal.cpp  fibo.cpp  hello.cpp  main.cpp  mystring.cpp  mystruct.cpp
test/: CMakeLists.txt  bla.cpp  fibo.cpp
